@@ -7,6 +7,7 @@ class RemoteQvalentTest < Test::Unit::TestCase
     @amount = 100
     @credit_card = credit_card("4000100011112224")
     @declined_card = credit_card("4000000000000000")
+    @expired_card = credit_card("4111111113444494")
 
     @options = {
       order_id: generate_unique_id,
@@ -19,18 +20,36 @@ class RemoteQvalentTest < Test::Unit::TestCase
     gateway = QvalentGateway.new(
       username: "bad",
       password: "bad",
-      merchant: "101"
+      merchant: "101",
+      pem: "bad",
+      pem_password: "bad"
     )
 
-    authentication_exception = assert_raise ActiveMerchant::ResponseError do
+    assert_raise ActiveMerchant::ClientCertificateError do
       gateway.purchase(@amount, @credit_card, @options)
     end
-    response = authentication_exception.response
-    assert_match(%r{Error 403: Missing authentication}, response.body)
   end
 
   def test_successful_purchase
     response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_success response
+    assert_equal "Succeeded", response.message
+  end
+
+  def test_successful_purchase_with_soft_descriptors
+    options = {
+      order_id: generate_unique_id,
+      billing_address: address,
+      description: "Store Purchase",
+      customer_merchant_name: "Some Merchant",
+      customer_merchant_street_address: "42 Wallaby Way",
+      customer_merchant_location: "Sydney",
+      customer_merchant_country: "AU",
+      customer_merchant_post_code: "2060",
+      customer_merchant_state: "NSW"
+    }
+
+    response = @gateway.purchase(@amount, @credit_card, options)
     assert_success response
     assert_equal "Succeeded", response.message
   end
@@ -40,6 +59,68 @@ class RemoteQvalentTest < Test::Unit::TestCase
     assert_failure response
     assert_equal "Invalid card number (no such number)", response.message
     assert_equal Gateway::STANDARD_ERROR_CODE[:invalid_number], response.error_code
+  end
+
+  def test_successful_authorize
+    response = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success response
+    assert_equal "Succeeded", response.message
+  end
+
+  def test_failed_authorize
+    response = @gateway.authorize(@amount, @expired_card, @options)
+    assert_failure response
+    assert_equal "Expired card", response.message
+  end
+
+  def test_successful_capture
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+    assert_equal "Succeeded", auth.message
+    assert_not_nil auth.authorization
+
+    assert capture = @gateway.capture(@amount, auth.authorization, @options.merge({ order_id: generate_unique_id }))
+    assert_success capture
+  end
+
+  def test_failed_capture
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+    assert_equal "Succeeded", auth.message
+    assert_not_nil auth.authorization
+
+    assert capture = @gateway.capture(@amount, '', @options.merge({ order_id: generate_unique_id }))
+    assert_failure capture
+  end
+
+  def test_successful_partial_capture
+    assert auth = @gateway.authorize(200, @credit_card, @options)
+    assert_success auth
+    assert_equal "Succeeded", auth.message
+    assert_not_nil auth.authorization
+
+    assert capture = @gateway.capture(100, auth.authorization, @options.merge({ order_id: generate_unique_id }))
+    assert_success capture
+  end
+
+  def test_successful_void
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+    assert_equal "Succeeded", auth.message
+    assert_not_nil auth.authorization
+
+    assert void = @gateway.void(auth.authorization, @options.merge({ order_id: generate_unique_id }))
+    assert_success void
+  end
+
+  def test_failed_void
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+    assert_equal "Succeeded", auth.message
+    assert_not_nil auth.authorization
+
+    assert void = @gateway.void('', @options.merge({ order_id: generate_unique_id }))
+    assert_failure void
   end
 
   def test_successful_refund
