@@ -7,7 +7,9 @@ class QvalentTest < Test::Unit::TestCase
     @gateway = QvalentGateway.new(
       username: "username",
       password: "password",
-      merchant: "merchant"
+      merchant: "merchant",
+      pem: "pem",
+      pem_password: "pempassword"
     )
 
     @credit_card = credit_card
@@ -36,6 +38,48 @@ class QvalentTest < Test::Unit::TestCase
     assert response.test?
   end
 
+  def test_successful_authorize
+    response = stub_comms do
+      @gateway.authorize(@amount, @credit_card)
+    end.respond_with(successful_authorize_response)
+
+    assert_success response
+
+    assert_equal "21c74c8f08bca415b5373022e6194f74", response.authorization
+    assert response.test?
+  end
+
+  def test_failed_authorize
+    response = stub_comms do
+      @gateway.authorize(@amount, @credit_card)
+    end.respond_with(failed_authorize_response)
+
+    assert_failure response
+    assert_equal "Expired card",response.message
+    assert response.test?
+  end
+
+  def test_successful_capture
+    response = stub_comms do
+      @gateway.capture(@amount, "auth")
+    end.respond_with(successful_capture_response)
+
+    assert_success response
+
+    assert_equal "fedf9ea13afa46872592d62e8cdcb0a3", response.authorization
+    assert response.test?
+  end
+
+  def test_failed_capture
+    response = stub_comms do
+      @gateway.capture(@amount, "")
+    end.respond_with(failed_capture_response)
+
+    assert_failure response
+    assert_equal "Invalid Parameters - order.authId: Required field", response.message
+    assert response.test?
+  end
+
   def test_successful_refund
     response = stub_comms do
       @gateway.purchase(@amount, @credit_card)
@@ -59,6 +103,27 @@ class QvalentTest < Test::Unit::TestCase
     end.respond_with(failed_refund_response)
 
     assert_failure response
+  end
+
+  def test_successful_void
+    response = stub_comms do
+      @gateway.void("auth")
+    end.respond_with(successful_void_response)
+
+    assert_success response
+
+    assert_equal "67686b64b544335815002fd85704c8a1", response.authorization
+    assert response.test?
+  end
+
+  def test_failed_void
+    response = stub_comms do
+      @gateway.void("")
+    end.respond_with(failed_void_response)
+
+    assert_failure response
+    assert_equal "Invalid Parameters - customer.originalOrderNumber: Required field", response.message
+    assert response.test?
   end
 
   def test_successful_store
@@ -108,6 +173,42 @@ class QvalentTest < Test::Unit::TestCase
   def failed_purchase_response
     %(
       response.summaryCode=1\r\nresponse.responseCode=14\r\nresponse.text=Invalid card number (no such number)\r\nresponse.referenceNo=723907125\r\nresponse.orderNumber=b6e50802b764df4ca3e25fbd581e13d2\r\nresponse.settlementDate=20150228\r\nresponse.cardSchemeName=VISA\r\nresponse.creditGroup=VI/BC/MC\r\nresponse.previousTxn=0\r\nresponse.end\r\n
+    )
+  end
+
+  def successful_authorize_response
+    %(
+      response.summaryCode=0\r\nresponse.responseCode=08\r\nresponse.text=Honour with identification\r\nresponse.referenceNo=731560096\r\nresponse.orderNumber=21c74c8f08bca415b5373022e6194f74\r\nresponse.RRN=731560096   \r\nresponse.settlementDate=20170314\r\nresponse.transactionDate=14-MAR-2017 05:41:44\r\nresponse.cardSchemeName=VISA\r\nresponse.creditGroup=VI/BC/MC\r\nresponse.previousTxn=0\r\nresponse.authId=C3JVDS\r\nresponse.end\r\n
+    )
+  end
+
+  def failed_authorize_response
+    %(
+      response.summaryCode=1\r\nresponse.responseCode=54\r\nresponse.text=Expired card\r\nresponse.referenceNo=731560142\r\nresponse.orderNumber=d48cb6104266ed1a51647576d8948c57\r\nresponse.RRN=731560142   \r\nresponse.settlementDate=20170314\r\nresponse.transactionDate=14-MAR-2017 05:45:18\r\nresponse.cardSchemeName=VISA\r\nresponse.creditGroup=VI/BC/MC\r\nresponse.previousTxn=0\r\nresponse.end\r\n
+    )
+  end
+
+  def successful_capture_response
+    %(
+      response.summaryCode=0\r\nresponse.responseCode=00\r\nresponse.text=Approved or completed successfully\r\nresponse.referenceNo=731560097\r\nresponse.orderNumber=fedf9ea13afa46872592d62e8cdcb0a3\r\nresponse.RRN=731560097\r\nresponse.settlementDate=20170314\r\nresponse.transactionDate=14-MAR-2017 05:45:52\r\nresponse.cardSchemeName=VISA\r\nresponse.creditGroup=VI/BC/MC\r\nresponse.previousTxn=0\r\nresponse.end\r\n
+    )
+  end
+
+  def failed_capture_response
+    %(
+      response.summaryCode=3\r\nresponse.responseCode=QA\r\nresponse.text=Invalid Parameters - order.authId: Required field\r\nresponse.previousTxn=0\r\nresponse.end\r\n
+    )
+  end
+
+  def successful_void_response
+    %(
+      response.summaryCode=0\r\nresponse.responseCode=00\r\nresponse.text=Approved or completed successfully\r\nresponse.referenceNo=731560098\r\nresponse.orderNumber=67686b64b544335815002fd85704c8a1\r\nresponse.settlementDate=20170314\r\nresponse.cardSchemeName=VISA\r\nresponse.creditGroup=VI/BC/MC\r\nresponse.previousTxn=0\r\nresponse.end\r\n
+    )
+  end
+
+  def failed_void_response
+    %(
+      response.summaryCode=3\r\nresponse.responseCode=QA\r\nresponse.text=Invalid Parameters - customer.originalOrderNumber: Required field\r\nresponse.previousTxn=0\r\nresponse.end\r\n
     )
   end
 
