@@ -3,6 +3,7 @@
 == HEAD
 * JetPay: Adjust refund and void transaction types [davidsantoso] #2356
 * GlobalCollect: Truncate firstName field to 15 characters [davidsantoso]
+* Qvalent: Add soft descriptor fields. Add authorize, capture, and void [davidsantoso]
 
 == Version 1.64.0 (March 6, 2017)
 * Authorize.net: Allow settings to be passed for CIM purchases [fwilkins] #2300
